apps/base/agentgateway/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agentgateway-system
  labels:
    name: agentgateway-system
